# agentic-hms

./: .gitignore  development_plan.md  docker-compose.yml  future_scope.md  implementation_plan.md
apps/api/: .gitignore  Dockerfile  main.py  pyproject.toml
apps/api/agents/base/: agent.py
apps/api/agents/chatbot/: agent.py  hospital_client.py  intent_detector.py  router.py  state.py
apps/api/agents/doctor_assistance/: agent.py  queue_client.py  router.py  state.py
apps/api/agents/queue/: client.py  router.py  schemas.py  state.py
apps/api/agents/registration/: agent.py  router.py  state.py
apps/api/db/: __init__.py  schema.sql  session.py
apps/api/models/: __init__.py  consultation.py  department.py  doctor.py  doctor_queue.py  hospital.py  patient.py  prescription.py  prescription_item.py  queue_entry.py  visit.py
apps/api/routers/: doctor_router.py  hospital_router.py
apps/api/schemas/: agent.py  hospital.py
apps/api/services/: __init__.py  agent_session_service.py  consultation_service.py  department_service.py  doctor_service.py  hospital_service.py  patient_service.py  prescription_service.py  queue_service.py  visit_service.py
apps/api/services/llm/: __init__.py  department_resolver.py  symptom_summarizer.py
apps/frontend/: vite.config.js
apps/frontend/src/: App.jsx
apps/frontend/src/components/: HospitalGuard.jsx  Layout.jsx
apps/frontend/src/pages/: ChatbotPage.jsx  DoctorLoginPage.jsx  DoctorPage.jsx  (+3 more)
scripts/: create_tables.py  db_conn_test.py  migrate_to_multi_tenancy.py  patient_service_test.py  registration_agent_test.py
(+1 files in other folders)
